--- a/README.adoc
+++ b/README.adoc
@@ -260,7 +260,8 @@ https://github.com/plexus/chemacs2[Chemacs 2 is an Emacs profile switcher, it ma
      Useful for terminals e.g. Oh My Bash, etc.
   ** https://input.djr.com/[Fonts for code from DJR & Font Bureau]
   ** https://coding-fonts.netlify.app/[Coding Fonts] *
-     Nice Web interface to view the HTML/CSS/JavaScripts/Characters effects.
+     Nice Web interface to view the HTML/CSS/JavaScripts/Characters effects. +
+     I like Cousine and Anonymous Pro fonts, installed the Cousine one on my Windows 11, set to LiteIDE's default font.
 * Diagrams
   ** https://kroki.io/examples.html[Kroki - Creates diagrams from textual descriptions!]
   ** https://tomgregory.com/using-plantuml-for-digrams-in-a-gitlab-wiki/[Using PlantUML For Diagrams In A GitLab Wiki]
