--- a/README.adoc
+++ b/README.adoc
@@ -256,10 +256,20 @@ https://github.com/plexus/chemacs2[Chemacs 2 is an Emacs profile switcher, it ma
   ** https://kate-editor.org/syntax/data/html/asciidoc.adoc.html[AsciiDoc Syntax Highlighting]
   ** https://plantuml.com/sequence-diagram[Sequence Diagrams]
 * Fonts
-  ** https://www.nerdfonts.com/font-downloads[Nerd Fonts Download] *
+  ** My Fonts
+    *** VS Code, Font: Cousine, Size: 16, Line Height: 1.6
+    *** PyCharm, Font: Cousine, Size: 14, Line Height: 1.1
+    *** IntelliJ IDEA, Cousine, Size: 14, Line Height: 1.3
+    *** Sublime Text, Font: SpaceMono Nerd Font Mono, Size: 6
+    *** Putty, Font: SpaceMono Nerd Font Mono, Size: 12
+    *** MobaXterm, Font: SourceCodePro NF, Size: 12
+  ** Font Squirrel
+    *** https://www.fontsquirrel.com/[Fontsquirrel]
+    *** https://www.fontsquirrel.com/fonts/[Fontsquirrel Fonts]
+  ** https://www.nerdfonts.com/font-downloads[Nerd Fonts Download] +
      Useful for terminals e.g. Oh My Bash, etc.
   ** https://input.djr.com/[Fonts for code from DJR & Font Bureau]
-  ** https://coding-fonts.netlify.app/[Coding Fonts] *
+  ** https://coding-fonts.netlify.app/[Coding Fonts] +
      Nice Web interface to view the HTML/CSS/JavaScripts/Characters effects. +
      I like Cousine and Anonymous Pro fonts, installed the Cousine one on my Windows 11, set to LiteIDE's default font.
 * Diagrams
