--- a/README.adoc
+++ b/README.adoc
@@ -294,4 +294,14 @@ https://github.com/plexus/chemacs2[Chemacs 2 is an Emacs profile switcher, it ma
     *** The Pokemon API
 
 == Links
+=== Awesome Stuffs
+* https://github.com/avelino/awesome-go[avelino/Awesome Go]
+* https://github.com/uhub/awesome-go[uhub/Awesome Go]
+* https://github.com/vinta/awesome-python[vintta/Awesome Python]
+* https://github.com/oz123/awesome-c[oz123/Awesome C]
+* https://github.com/uhub/awesome-c[uhub/Awesome C]
+* https://github.com/fffaraz/awesome-cpp[fffaraz/Awesome C++]
+* https://github.com/lukasz-madon/awesome-remote-job[Awsome Remote Job]
+
+=== Downloads
 * https://www.fileeagle.com/software[Software Downloads]
