--- a/Entertainment.adoc
+++ b/Entertainment.adoc
@@ -16,4 +16,7 @@
 
 == YouTube
 
-* https://www.youtube.com/watch?v=5kvHqi8ECPM[遊客興起花過萬蚊幫人鏟雪]
+=== World
+* https://www.youtube.com/watch?v=VHFvgFnUO8g[Top 10 Disasters]
+* https://www.youtube.com/watch?v=6ZCIOj74dXM[Earthquake countries]
+* https://www.youtube.com/watch?v=HIuXEU4H-XE[The Search for MH370 is Back ON! What’s changed?!]
