--- a/Entertainment.adoc
+++ b/Entertainment.adoc
@@ -17,6 +17,8 @@
 == YouTube
 
 === World
-* https://www.youtube.com/watch?v=VHFvgFnUO8g[Top 10 Disasters]
-* https://www.youtube.com/watch?v=6ZCIOj74dXM[Earthquake countries]
-* https://www.youtube.com/watch?v=HIuXEU4H-XE[The Search for MH370 is Back ON! What’s changed?!]
+
+* https://www.youtube.com/watch?v=jLpUEACVBlE[Trump’s Auto Tariffs: We Broke Down an F-150 to Explain Industry Impact | WSJ]
+* https://www.youtube.com/watch?v=qPAhLxUkCVQ[Architect Dad Transforms Son’s Small Sydney Apartment, 50sqm/538sqft]
+* https://www.youtube.com/watch?v=jbCN463aE_E[危险的富贵：赵薇的难言之隐]
+* https://www.youtube.com/watch?v=dtaidfn7sVk[反叛的御医：毛泽东的后宫生活]
