--- a/Entertainment.adoc
+++ b/Entertainment.adoc
@@ -18,4 +18,4 @@
 
 === World
 
-* https://www.youtube.com/watch?v=ZpKnggCKg-o[VANLIFE with a CAT | Truck Stop Camping & Exploring Mesa Verde]
+* https://www.youtube.com/watch?v=fpsraaMDK84[Helicopters DON'T just fall from the sky - What is "Mast umping"?]
