--- a/Entertainment.adoc
+++ b/Entertainment.adoc
@@ -18,4 +18,5 @@
 
 === World
 
-* https://www.youtube.com/watch?v=fpsraaMDK84[Helicopters DON'T just fall from the sky - What is "Mast umping"?]
+* https://www.youtube.com/watch?v=nvQLH9_4qik[“中国川普”走红海内外]
+* https://www.youtube.com/watch?v=tSK92ixPKvU["Chinese Trump" Makes China Great Again]
