--- a/Entertainment.adoc
+++ b/Entertainment.adoc
@@ -20,3 +20,4 @@
 
 * https://www.youtube.com/watch?v=nvQLH9_4qik[“中国川普”走红海内外]
 * https://www.youtube.com/watch?v=tSK92ixPKvU["Chinese Trump" Makes China Great Again]
+* https://www.youtube.com/watch?v=2NjKQ9tIsx4[3rd Angle]
